# desyre

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  auto_diff_2nd_order.cpp  config.hpp.in  desyre-config.cmake.in  dsyre-config.cmake.in  genindex.html  index.html  koza_quintic_simple.cpp  main.cpp  mes4dsyre.cpp  objects.inv  search.html  searchindex.js
.github/workflows/: main.yml  main2.yml
_sources/: index.rst.txt
_sources/api/: gym.rst.txt  index.rst.txt  udps_udas.rst.txt  utilities.rst.txt
_sources/notebooks/: encoding.ipynb.txt  ert.ipynb.txt  introduction.ipynb.txt  symbolic_regression_pagmo.ipynb.txt
api/: expression.html  gym.html  index.html  udps_udas.html  utilities.html
benchmark/: CMakeLists.txt  ddphenotype.cpp  dphenotype.cpp  phenotype.cpp  sr_problem_fitness.cpp  sr_problem_fitness_mo.cpp
doc/: conf.py  conf.py.in
docs/: conf.py.in  genindex.html  index.html  search.html
docs/notebooks/: introduction.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: expression.rst  gym.rst  index.rst  udps_udas.rst
docs/source/notebooks/: introduction.ipynb
docs/source/theory/: symbolic_regression.rst
docs/theory/: symbolic_regression.html
include/desyre/: expression.hpp  kernels.hpp
include/desyre/detail/: visibility.hpp
include/dsyre/: expression.hpp  formatters.hpp  kernels.hpp  mes4dsyre.hpp  problem.hpp  sr_problem.hpp  symengine.hpp  update_constants.hpp
include/dsyre/detail/: data_generation.hpp  visibility.hpp
include/dsyre/gym/: gym.hpp  misc_data.hpp  nist_data.hpp
notebooks/: encoding.html  encoding.ipynb  ert.html  ert.ipynb  introduction.html  introduction.ipynb  symbolic_regression_pagmo.html  symbolic_regression_pagmo.ipynb
pydsyre/: CMakeLists.txt  __init__.py  _version.py.in  common_utils.hpp  core.cpp  docstrings.cpp  docstrings.hpp  python_includes.hpp  test.py
src/: expression.cpp  kernels.cpp  mes4dsyre.cpp  sr_problem.cpp  update_constants.cpp
src/gym/: gym.cpp
test/: CMakeLists.txt  expression.cpp  operators.cpp  sr_problem.cpp  update_constants.cpp
theory/: symbolic_regression.html
tools/: gha-osx-debug.sh  gha-ubuntu-debug.sh  gha-ubuntu-docs.sh  gha-ubuntu-python-docs.sh  gha-windows-release.ps1
